--- a/13 HTML&CSS/3 Prototype_2/assets/css/style.css
+++ b/13 HTML&CSS/3 Prototype_2/assets/css/style.css
@@ -15,6 +15,7 @@ body{
     --primary-button-color: #1565D8;
     --sub-title-text: #05d9ff;
     --white: #ffffff;
+    --secondary-sub-title-text:#1565D8;
 }
 
 h1{
@@ -22,7 +23,7 @@ h1{
 }
 
 h2{
-    font-size: 1.5rem;
+    font-size: 1.8rem;
 }
 
 h3{
@@ -78,7 +79,7 @@ li{
     max-width: 1170px;
     margin-inline: auto;
     overflow: none;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 0 16px;
 }
 .primary-btn{
@@ -193,4 +194,296 @@ li{
     margin-top: 50px;
     align-items: center;
     justify-content: space-between;
+}
+
+
+/* services section" */
+
+.services-section{
+    margin-top: 60px;
+    padding-block: 60px;
+    background-color: rgb(247, 250, 255);
+}
+
+
+.services-section-container{
+    flex-direction: column;
+    padding: 0 !important;
+}
+
+.services-head{
+    align-items: center;
+    column-gap: 300px;
+    padding-inline: 16px;
+}
+
+.service-card{
+    width: 33.33%;
+}
+.services-card-wrapper{
+    margin-top: 60px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 32px;
+
+}
+
+.service-card-content{
+    flex-direction:row !important;
+    padding: 30px;
+    column-gap: 10px;
+    align-items: flex-start;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow:3px 3px 8px 0 rgba(0, 0, 0, 0.2)
+}
+
+.service-card-head-text{
+    margin-bottom: 10px;
+    line-height: 20px;
+    color: var(--primary-text-color);
+    font-size: 1.1rem;
+}
+.service-card{
+    padding-inline: 16px;
+}
+.service-card-para-text{
+    color: var(--secondary-text-color);
+    font-size: 0.9rem;
+}
+
+/* project section */
+
+.project-section{
+    margin-top: 100px;
+}
+
+.project-section-container{
+    padding: 0;
+}
+.project-container-head{
+    padding-inline: 16px;
+}
+
+
+.project-card{
+    margin-top: 50px;
+    width: 33.33%;
+    padding-inline: 16px;
+}
+
+.project-card-description{
+    margin-top: -4px;
+    border: 0.5px solid rgba(136, 136, 136, 0.137);
+    padding: 20px;
+    border-bottom-right-radius:8px;
+    border-bottom-left-radius:8px;
+}
+
+.project-image{
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.project-label-text{
+    font-size: 15px;
+    color: var(--secondary-sub-title-text);
+}
+.project-heading-text, .testimonial-heading-text{
+    margin-top: 20px;
+    font-size: 1.8rem;
+}
+.project-card-wrapper{
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+/* testimonial section */
+
+.testimonial-section{
+    margin-top: 100px;
+
+}
+.testimonial-section-container{
+    padding: 0;
+}
+.testimonial-container-head{
+    padding: 0 16px;
+}
+.testimonial-card-wrapper{
+    margin-top: 40px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 16px;
+}
+
+.testimonial-card{
+    width: 50%;
+    padding: 0 16px;
+}
+
+.testimonial-card-content{
+    padding: 40px;
+    border-radius: 8px;
+    border: 0.5px solid rgba(136, 136, 136, 0.137);    
+}
+
+.testimonial-card-head{
+    flex-direction: row;
+    align-items: center;
+    column-gap: 15px; 
+}
+
+.testimonial-card-head-wrapper{
+    flex-direction: column;
+    row-gap: 10px;
+}
+.testimonial-card-description{
+    margin-top: 20px;
+}
+.testimonial-card-para{
+    line-height: 25px;
+}
+
+/* social section started */
+.social-link-section{
+    margin-top:100px;
+}
+.social-section-container{
+    padding: 0;
+}
+
+.social-head-container{
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+.social-card-wrapper{
+    margin-top: 50px;
+    justify-content: center;
+}
+
+.social-card{
+    width: 25%;
+}
+
+.social-card-content{
+    text-align: center;
+    padding: 40px;
+    flex-direction: column;
+    align-items: center;
+}
+.social-card-image-container{
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    padding: 10px 10px 10px 10px;
+    background-color: rgb(226, 237, 255);
+    border-radius: 15px;
+}
+
+
+.social-card-img{
+    width: auto;
+    height:min-content;
+    /* padding: 10px;
+    border-radius: 15px;
+    background-color: rgb(226, 237, 255); */
+}
+.social-card-heading{
+    padding-top: 20px;
+    font-weight: 700;
+}
+.social-card-desc{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    line-height: 25px;
+}
+
+.social-card-link{
+    font-weight: 700;
+    color: var(--secondary-sub-title-text);
+}
+
+/* cta section */
+.cta-section{
+    margin-top: 50px;
+    background-color: #2cb7cf;
+}
+.cta-section-container{
+    padding-block: 60px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.cta-btn{
+    padding: 8px 12px;
+    display: inline;
+    border-radius: 8px;
+    background-color: var(--white);
+    font-weight: 600px !important;
+    color: var(--primary-text-color);
+}
+.cta-button{
+    margin-top: 30px;
+}
+.cta-head-text, .cta-para-text{
+    color: var(--white);
+}
+
+/* footer section */
+.footer-section{
+    background-color: #0f2133;
+    padding-bottom: 50px;
+}
+
+
+.footer-left{
+    width: 30%;
+    padding-top: 100px;
+}
+.footer-right{
+    width: 70%;
+    padding-top: 100px;
+    margin-left: 40px;
+}
+.footer-left-img-container{
+    line-height: 50px;
+}
+
+.footer-left-p{
+    color: var(--secondary-text-color);
+    line-height: 30px;
+}
+.social-logo-container{
+    margin-top: 20px;
+    gap: 30px;
+}
+.footer-left-p-s{
+    font-size: 1.2rem;
+    color: #749fc7;
+}
+.footer-left-p{
+    font-size: 1.1rem;
+    padding-top: 20px;
+    color: #7294b4;
+}
+.footer-right-inner{
+    gap: 80px;
+}
+.footer-container{
+    flex-direction: column;
+    row-gap: 100px;
+}
+.footer-bottom{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.copy-right-p{
+    padding-top:20px ;
+    color: #7294b4;
 }
