--- a/13 HTML&CSS/2 Prototype_1 (copy)/style.css
+++ b/13 HTML&CSS/2 Prototype_1 (copy)/style.css
@@ -328,6 +328,9 @@ li{
     flex-direction: column;
     /* align-items: center; */
 }
+.blog-card {
+    width: 50%;
+}
 
 .blog-head{
     line-height: 46px;
@@ -355,6 +358,8 @@ li{
     margin-top:50px;
     display: flex;
     padding-bottom: 20px;
+    flex-wrap: wrap;
+    row-gap: 60px;
     justify-content: space-between;
 }
 
