--- a/14 Login and Authentication with JWT/assets/css/registration.css
+++ b/14 Login and Authentication with JWT/assets/css/registration.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Oswald&display=swap'); */
-
 *{
     margin: 0;
     padding: 0;
@@ -9,13 +7,11 @@
 body{
     font-family:sans-serif;
 }
-
 .main-body-section{
     height: 100vh;
     background-image: url(../images/auth-bg.png);
     background-size: cover;
 }
-
 .flex{
     display: flex;
 }
@@ -77,4 +73,9 @@ body{
     position: absolute;
     bottom: 20px;
     right: 200px;
+}
+.red{
+    color: red;
+    margin-top: 5px;
+    font-size: 13px;
 }
