--- a/14 Login and Authentication with JWT/views/registration.ejs
+++ b/14 Login and Authentication with JWT/views/registration.ejs
@@ -34,7 +34,7 @@
                                     <div class="email-box flex flex-col">
                                         <label class="label-text" for="useremail">Email</label>
                                         <input class="text-box" oninput="checkEmail(this.value)" type="text" name="useremail" required>
-                                        <div class="red email-warning"> </div>
+                                        <div id="email-warning" class="red email-warning"> </div>
                                     </div>
                 
                                     <div class="password-box flex flex-col" >
