--- a/14 Login and Authentication with JWT/views/registration.ejs
+++ b/14 Login and Authentication with JWT/views/registration.ejs
@@ -28,12 +28,12 @@
                                     <div class="username-box flex flex-col">
                                         <label class="label-text" for="username">Name</label>
                                         <input class="text-box" id="username" oninput="checkName(this.value)" type="text" name="username" required>
-                                        <div class="red name-warning"> </div>
+                                        <div id="name-warning" class="red name-warning"> </div>
                                     </div>
                 
                                     <div class="email-box flex flex-col">
                                         <label class="label-text" for="useremail">Email</label>
-                                        <input class="text-box" oninput="checkEmail(this.value)" type="text" name="useremail" required>
+                                        <input class="text-box" onchange="checkEmail(this.value)" type="text" name="useremail" required>
                                         <div id="email-warning" class="red email-warning"> </div>
                                     </div>
                 
